# airflow-dags

./: .airflowignore  .gitignore  AGENTS.md  pyproject.toml  readme.md
.claude/: settings.local.json
dags/: .env  __init__.py  aviasales_mongo_postgres.py  my_dag.py  public_docs_crawler.py  run_aviasales_app_dag.py  run_aviasales_dagg.py  serp_beir_scifact_live_benchmark.py  serp_benchmark_catalog.py  serp_benchmark_catalog_materializer.py  serp_benchmark_catalog_workload.py  serp_benchmark_improvement_wave.py  serp_benchmark_runtime_prerequisite.py  serp_d19_history_observer.py  serp_ds1000_contract.py  serp_eval_contracts.py  serp_evidence_workload_identity.py  serp_kubernetes_executor.py  serp_mandatory_benchmark_dataset_evidence_snapshot.py  serp_minio_sts_task_log_io.py  serp_minio_sts_task_logging.py  serp_model_catalog_promotion.py  serp_model_promotion_regression_suite.py  serp_nightly_regression_suite.py  serp_online_eval_rollup.py  serp_public_docs_context_benchmark.py  serp_public_docs_context_benchmark_contracts.py  serp_public_docs_seed_catalog.py  serp_public_docs_seed_refresh_remote_runner.py  serp_publish_signed_pack.py  serp_scifact_benchmark_contracts.py  serp_tenant_golden_set_regression.py  serp_web_seed_crawl_refresh.py  simple_aviasale_dag.py
tests/: test_public_docs_crawler.py  test_public_docs_seed_evidence_snapshots.py  test_public_docs_seed_refresh_remote_runner.py  test_release_metadata.py  test_serp_benchmark_catalog.py  test_serp_benchmark_catalog_materializer.py  test_serp_benchmark_runtime_prerequisite.py  test_serp_d19_history_observer.py  test_serp_eval_contracts.py  test_serp_evaluation_release_v2.py  test_serp_evaluation_release_v3.py  test_serp_kubernetes_executor.py  test_serp_minio_sts_task_logging.py  test_serp_model_catalog_promotion.py  test_serp_public_docs_context_benchmark.py  test_serp_public_docs_context_benchmark_dag.py  test_serp_scifact_benchmark_contracts.py  test_vault_transit_workload_identity.py
