[project]
name = "adapstory-airflow-dags"
version = "2026.07.2"
description = "Installable Airflow DAG package for the Adapstory runtime image."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35,<2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13,<2.0",
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=7.0,<8.0",
    "ruff>=0.8,<0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dags"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "airflow.*",
    "boto3",
    "botocore.*",
]
ignore_missing_imports = true
